datacenter-deploy-hcp-eks-lambda/modules/eks-client/api-gw/consul-api-gateway.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: api-gateway
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Same
